--- a/second/src/app/app.component.html
+++ b/second/src/app/app.component.html
@@ -1,1 +1,13 @@
+<ul>
+    <li><a class="navigationLinkButton" *ngIf="!securityService.IsAuthorized()" (click)="Login()">Login</a></li>
+    <li><a class="navigationLinkButton" *ngIf="securityService.IsAuthorized()" (click)="Logout()">Logout</a></li>
+</ul>
+
+<div *ngIf="securityService.IsAuthorized()">
+    <h2>authenticated userdata:</h2>
+    <pre>{{securityService.UserData | json}}</pre>
+    <h2>authenticated token:</h2>
+    <pre>{{securityService.GetToken()}}</pre>
+</div>
+
 <router-outlet></router-outlet>
